syntax = "proto3";
package veranablockchain.trustregistry;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustregistry/types";

message TrustRegistry {
  string did = 1;
  string controller = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp created = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp modified = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  int64 deposit = 5;
  string aka = 6;
  int32 active_version = 7;
  string language = 8;
}

message GovernanceFrameworkVersion {
  string id = 1;
  string tr_did = 2;
  google.protobuf.Timestamp created = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  int32 version = 4;
  google.protobuf.Timestamp active_since = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message GovernanceFrameworkDocument {
  string id = 1;
  string gfv_id = 2;
  google.protobuf.Timestamp created = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  string language = 4;
  string url = 5;
  string hash = 6;
}